# Renode_RP2040

./: .gitignore  README.md  blinky  blinky_layout.json  build_pico_examples.sh  clock  clock_layout.json  fetch_pico_examples.bat  initialize_common.resc  initialize_raspberry_pico.resc  initialize_rp2040.repl  initialize_rp2040.resc  raspberry_blinky.repl  raspberry_clock.repl  raspberry_pico.repl  raspberry_pico_with_leds_and_button.repl  rp2040.repl  run_blinky.resc  run_clock.resc  run_firmware.resc  run_tests.sh  test.repl
boards/: initialize_custom_board.resc  initialize_custom_rp2350_board.resc  initialize_raspberry_pico.resc  initialize_raspberry_pico2.resc  raspberry_pico.repl  raspberry_pico2.repl
cores/: inialize_common.resc  initialize_peripherals.resc  initialize_rp2350_peripherals.resc  rp2350a.repl
emulation/: Peripherals.csproj  Peripherals2.csproj  emulation.sln  rp2040_alias.cs
pico_examples_patches/: 0001-Fixed-newline-in-Hello-48-MHz-example.patch  0001-Optimized-pio_blink-for-renode.patch  0001-Removed-GPOUT-frequency-to-reduce-simulation-time.patch  0001-added-button-example.patch  0001-added-more-dma-examples.patch  0001-added-more-extended-DMA-tests-with-ring-usage.patch  0001-added-newline-to-joystick-example.patch  0001-fixes-for-new-crc-examples.patch
piosim/: .clang-format  CMakeLists.txt  decoder.cpp  decoder.hpp  fetch_piosim.py  fifo.cpp  fifo.hpp  gpio.hpp  libpiosim.dylib  opcode.hpp  pio.cpp  pio.hpp  pio_iregister.hpp  pio_registers.cpp  pio_registers.hpp  pio_renode_glue.cpp  pio_renode_glue.hpp  pio_statemachine.cpp  pio_statemachine.hpp  renode_log.hpp
piosim/.cache/clangd/index/: decoder.cpp.307A2BB6D7D5A654.idx  decoder.hpp.8F53E8F33B74764A.idx  fifo.cpp.BAFDCFB5AC164143.idx  fifo.hpp.83AAFA01085E2A3D.idx  pio.cpp.BAEBB827ED45C7E0.idx  pio.hpp.394254056CA9942C.idx  pio_iregister.hpp.111FA81CFFFE6EB7.idx  pio_registers.cpp.5AB779B5F6AECFA9.idx  pio_registers.hpp.E0049BFDFF190364.idx  pio_renode_glue.cpp.673715243F79D15F.idx  pio_renode_glue.hpp.2D4A60CFA0E7D1A9.idx  pio_statemachine.cpp.44421419FE86AFCB.idx  pio_statemachine.hpp.53B5E7D0B8789349.idx  renode_log.hpp.3873D5E5741E2E4C.idx
piosim/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
piosim/docker/: Dockerfile
piosim/redist/: libpiosim.dylib
piosim/scripts/: build_linux.sh  build_windows.sh
piosim/tests/: CMakeLists.txt
piosim/tests/fifo_blink/: CMakeLists.txt  test.cpp
tests/: build_pico_examples.sh  common.resource  pico_examples_revision  prepare.repl  (+5 more)
(+283 files in other folders)
